swagger path variable fix
